feat: add user registration and role-based access control